# kinochi-project-alpha

./: .gitignore  Dockerfile  Kinochi_PRD_Technical_Documentation.md  README.md  add_series_sources.sql  check_db.py  check_db2.py  docker-compose.yml  neon_migration.sql  requirements.txt  run.py  start_all.bat  test_api.py  test_cookies.py  test_movie.py
backend/: .env.example  Dockerfile  alembic.ini  apply_all.py  apply_migration.py  apply_sync.py  check_db.py  check_migration.py  fix_alembic_version.py  local_test.py  local_test_auth.py  local_test_auth2.py  pyproject.toml  requirements.txt  run_migration.py  run_setup.ps1  setup.bat  temp_setup.py  test_api.py  test_create_movie.py  test_put_500.py
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: .gitkeep  19a7009b0b0b_add_multi_dubbing.py  2fb109c075d0_auto_index_fields.py  5f880cb7b638_add_episode_count_and_duration.py  80c4dc9b2cdd_initial_movies_and_categories.py  8e4e155f48db_add_dynamic_pages.py  (+6 more)
backend/app/: __init__.py  main.py
backend/scripts/: create_superadmin.py  test_redis_graceful.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_broadcast_service.py  test_category_service.py  test_channel_service.py  test_health.py  test_movie_service.py  test_series_service.py  test_telegram_link_parser.py  test_user_service.py
bot/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
bot/handlers/: admin_panel.py  auto_index.py  browsing.py  catalog.py  check_sub.py  episode.py  search.py  series.py  start.py  translation_callback.py
bot/keyboards/: __init__.py  inline.py  reply.py  translations.py
bot/middlewares/: __init__.py  subscription_check.py
bot/services/: api_client.py
bot/utils/: episode_sender.py  info_sender.py  movie_sender.py
(+146 files in other folders)
