[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "kinochi-backend"
version = "0.1.0"
description = "Kinochi — movie discovery & delivery platform backend (FastAPI + Clean Architecture)"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",

    # Database — async PostgreSQL
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",

    # Migrations
    "alembic>=1.14,<2.0",

    # Validation / settings
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",

    # Cache / rate-limiting
    "redis[hiredis]>=5.0,<6.0",

    # Utilities
    "shortuuid>=1.0.11",

    # Auth — password hashing & JWT
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "PyJWT>=2.8,<3.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",           # for TestClient async
    "ruff>=0.6",             # linter + formatter
]

