[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["handlers*", "services*", "keyboards*", "middlewares*"]

[project]
name = "kinochi-bot"
version = "0.1.0"
description = "Kinochi Telegram Bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6"
]
